# AIGameCreation-CrewAI

CREW_AI/game_version_v1/: GameTemplate.html  README.md  pyproject.toml
CREW_AI/game_version_v1/game_outputs/: code_integrated.html  crew_output.txt  design_ui_ux_output.txt  final_game.html  generate_game_logic_output.txt  handle_input_controls_output.txt  input.js  integrate_code_modules_output.txt  progress.json  script.js  ui_ux.html
CREW_AI/game_version_v1/knowledge/: user_preference.txt
CREW_AI/game_version_v1/src/game_version_v1/: main.py
CREW_AI/game_version_v1/src/game_version_v1/config/: agents.yaml  tasks.yaml
CREW_AI/game_version_v1/src/game_version_v1/crew/: GameVersionV1.py  __init__.py
CREW_AI/game_version_v1/src/game_version_v1/prompts/: asset_integration_agent.txt  code_integrator_agent.txt  game_logic_agent.txt  image_asset_agent.txt  tester_debugger_agent.txt  ui_ux_agent.txt  user_input_agent.txt
CREW_AI/game_version_v1/src/game_version_v1/tools/: image_generation_tool.py
game_version0/: game_v3.html  index.html
