[project]
name = "game_version_v1"
version = "0.1.0"
description = "game_version_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
game_version_v1 = "game_version_v1.main:run"
run_crew = "game_version_v1.main:run"
train = "game_version_v1.main:train"
replay = "game_version_v1.main:replay"
test = "game_version_v1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
